--- a/SoftPhone.Connector/Popups/ConversationWindow.xaml
+++ b/SoftPhone.Connector/Popups/ConversationWindow.xaml
@@ -5,7 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:tb="http://www.hardcodet.net/taskbar"	
-    xmlns:local="clr-namespace:SoftPhone.Connector.Popups"
+    xmlns:local="clr-namespace:SoftPhone.Connector.Popups" ResizeMode="NoResize"
     Height="300"
     Width="450">
 
