--- a/SoftPhone.Connector/Resources/NotifyIconResource.xaml
+++ b/SoftPhone.Connector/Resources/NotifyIconResource.xaml
@@ -9,8 +9,10 @@
         reuse the same context menu (which is a resource) again (which will have its DataContext set to the old TaskbarIcon)
   -->
 	<ContextMenu x:Shared="false" x:Key="SysTrayMenu">
-		<MenuItem Header="Show Window" Command="{Binding ShowWindowCommand}" />
-		<MenuItem Header="Hide Window" Command="{Binding HideWindowCommand}" />
+		<MenuItem Header="Salesforce credentials" Command="{Binding ShowSalesforceCredentialsWindowCommand}" />
+
+		<!--<MenuItem Header="Show Window" Command="{Binding ShowWindowCommand}" />
+		<MenuItem Header="Hide Window" Command="{Binding HideWindowCommand}" />-->
 		<Separator />
 		<MenuItem Header="Exit" Command="{Binding ExitApplicationCommand}" />
 	</ContextMenu>
