Moving Token to Credentials

--- a/SoftPhone.Connector/Popups/SalesforceCredentialsWindow.xaml
+++ b/SoftPhone.Connector/Popups/SalesforceCredentialsWindow.xaml
@@ -5,18 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SoftPhone.Connector.Popups"
         mc:Ignorable="d" ResizeMode="NoResize"
-        Title="Salesforce Credentials" Height="390" Width="390">
+        Title="Salesforce Credentials" Height="417.331" Width="390">
 
 	<Grid Background="{StaticResource AppBackground}" Margin="0,0, 0,0" HorizontalAlignment="Left" Width="390">
 		<Grid.RowDefinitions>
 			<RowDefinition Height="390*"/>
 		</Grid.RowDefinitions>
 		<Canvas Margin="0,0,390,0" Grid.RowSpan="2">
-			<TextBox Canvas.Left="55" TextWrapping="NoWrap" Canvas.Top="82" x:Name="Login" FontSize="20" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="270" Height="28"/>
-			<TextBlock Canvas.Left="55" FontSize="30" TextWrapping="Wrap" Text="Login" Canvas.Top="37" Foreground="#FFECAD25"/>
-			<PasswordBox Canvas.Left="55" Canvas.Top="173" x:Name="Password" Width="270" Height="28" FontSize="20" />
-			<TextBlock Canvas.Left="55" TextWrapping="Wrap" Text="Password" FontSize="30" VerticalAlignment="Center" Canvas.Top="122" Foreground="#FFECAD25"/>
-			<Button x:Name="save" Content="Save" Click="save_Click" FontSize="25"  Canvas.Top="238" Canvas.Left="116" Height="62" Width="154" Foreground="#FFECAD25"></Button>
+			<TextBox Canvas.Left="55" TextWrapping="NoWrap" Canvas.Top="62" x:Name="Login" FontSize="20" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="270" Height="28"/>
+			<TextBlock Canvas.Left="55" FontSize="30" TextWrapping="Wrap" Text="Login" Canvas.Top="17" Foreground="#FFECAD25"/>
+			<PasswordBox Canvas.Left="55" Canvas.Top="149" x:Name="Password" Width="270" Height="28" FontSize="20" />
+			<TextBlock Canvas.Left="55" TextWrapping="Wrap" Text="Password" FontSize="30" VerticalAlignment="Center" Canvas.Top="104" Foreground="#FFECAD25"/>
+			<TextBox Canvas.Left="55" TextWrapping="NoWrap" Canvas.Top="234" x:Name="Token" FontSize="20" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="270" Height="28"/>
+			<TextBlock Canvas.Left="55" FontSize="30" TextWrapping="Wrap" Text="Token" Canvas.Top="189" Foreground="#FFECAD25"/>
+
+			<Button x:Name="save" Content="Save" Click="save_Click" FontSize="25"  Canvas.Top="287" Canvas.Left="116" Height="62" Width="154" Foreground="#FFECAD25"></Button>
 		</Canvas>
 	</Grid>
 </Window>
