--- a/SoftPhone.Connector/Popups/SalesforceCredentialsWindow.xaml
+++ b/SoftPhone.Connector/Popups/SalesforceCredentialsWindow.xaml
@@ -4,10 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SoftPhone.Connector.Popups"
-        mc:Ignorable="d" ResizeMode="NoResize"
-        Title="Salesforce Credentials" Height="417.331" Width="390">
+        mc:Ignorable="d" ResizeMode="NoResize" Loaded="Window_Loaded"
+        Title="Salesforce Credentials" Height="524.98" Width="395.666">
 
-	<Grid Background="{StaticResource AppBackground}" Margin="0,0, 0,0" HorizontalAlignment="Left" Width="390">
+	<Grid Background="{StaticResource AppBackground}" HorizontalAlignment="Left" Width="390" Margin="0,0,0,-2">
 		<Grid.RowDefinitions>
 			<RowDefinition Height="390*"/>
 		</Grid.RowDefinitions>
@@ -19,7 +19,13 @@
 			<TextBox Canvas.Left="55" TextWrapping="NoWrap" Canvas.Top="234" x:Name="Token" FontSize="20" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="270" Height="28"/>
 			<TextBlock Canvas.Left="55" FontSize="30" TextWrapping="Wrap" Text="Token" Canvas.Top="189" Foreground="#FFECAD25"/>
 
-			<Button x:Name="save" Content="Save" Click="save_Click" FontSize="25"  Canvas.Top="287" Canvas.Left="116" Height="62" Width="154" Foreground="#FFECAD25"></Button>
+			<TextBlock Canvas.Left="55" FontSize="30" TextWrapping="Wrap" Text="Instance" Canvas.Top="282" Foreground="#FFECAD25"/>
+			<ComboBox Canvas.Left="55" Canvas.Top="327" x:Name="Instance" FontSize="18" VerticalAlignment="Center" 
+													RenderTransformOrigin="0.5,0.5" Width="270" Height="28"
+													SelectedItem="{Binding Path=InstanceName}">
+			</ComboBox>
+
+			<Button x:Name="save" Content="Save" Click="save_Click" FontSize="25"  Canvas.Top="402" Canvas.Left="118" Height="62" Width="154" Foreground="#FFECAD25"></Button>
 		</Canvas>
 	</Grid>
 </Window>
