--- a/SoftPhone.Connector/App.xaml
+++ b/SoftPhone.Connector/App.xaml
@@ -29,12 +29,17 @@
 
 			<LinearGradientBrush x:Key="AppBackground" EndPoint="0.5,1"
                                      StartPoint="0.5,0">
-				<GradientStop Color="#FF4B4B4B"
+				<GradientStop Color="#FF157eb4"
                                   Offset="0" />
-				<GradientStop Color="#FF8F8F8F"
+				<GradientStop Color="#FF88cfe0"
                                   Offset="1" />
 			</LinearGradientBrush>
 
+			<LinearGradientBrush x:Key="AppForeground" EndPoint="0.5,1"
+                                     StartPoint="0.5,0">
+				<GradientStop Color="#FF424d66" Offset="0" />
+				<GradientStop Color="#FF424d66" Offset="1" />
+			</LinearGradientBrush>
 		</ResourceDictionary>
 	
 	</Application.Resources>
