--- a/SoftPhone.Connector/Popups/SalesforceCredentialsWindow.xaml
+++ b/SoftPhone.Connector/Popups/SalesforceCredentialsWindow.xaml
@@ -5,25 +5,32 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SoftPhone.Connector.Popups"
         mc:Ignorable="d" ResizeMode="NoResize" Loaded="Window_Loaded"
-        Title="Salesforce Credentials" Height="428.661" Width="395.666">
+        Title="Salesforce Credentials" Height="520.661" Width="395.666">
 
-	<Grid Background="{StaticResource AppBackground}" HorizontalAlignment="Left" Width="396" Margin="0,0,-6,-1">
+	<Grid Background="{StaticResource AppBackground}" HorizontalAlignment="Left" Width="396" Margin="0,0,-6,0">
 		<Grid.RowDefinitions>
 			<RowDefinition Height="390*"/>
 		</Grid.RowDefinitions>
 		<Canvas Margin="0,0,390,0" Grid.RowSpan="2">
-			<TextBox Canvas.Left="55" TextWrapping="NoWrap" Canvas.Top="62" x:Name="Login" FontSize="20" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="270" Height="28"/>
-			<TextBlock Canvas.Left="55" FontSize="30" TextWrapping="Wrap" Text="Login" Canvas.Top="17" Foreground="#FFECAD25"/>
-			<PasswordBox Canvas.Left="55" Canvas.Top="149" x:Name="Password" Width="270" Height="28" FontSize="20" />
-			<TextBlock Canvas.Left="55" TextWrapping="Wrap" Text="Password" FontSize="30" VerticalAlignment="Center" Canvas.Top="104" Foreground="#FFECAD25"/>
+			<Image HorizontalAlignment="Left"
+               Margin="0,5,0,0"
+															Canvas.Left="10" Canvas.Top="0"
+               Source="/Images/CorA-175x65px.png"
+               Stretch="Fill"
+               Height="72"
+               VerticalAlignment="Top" />
+			<TextBox Canvas.Left="55" TextWrapping="NoWrap" Canvas.Top="137" x:Name="Login" FontSize="20" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="270" Height="28"/>
+			<TextBlock Canvas.Left="55" FontSize="30" TextWrapping="Wrap" Text="Login" Canvas.Top="92" Foreground="{StaticResource AppForeground}"/>
+			<PasswordBox Canvas.Left="55" Canvas.Top="221" x:Name="Password" Width="270" Height="28" FontSize="20" />
+			<TextBlock Canvas.Left="55" TextWrapping="Wrap" Text="Password" FontSize="30" VerticalAlignment="Center" Canvas.Top="181" Foreground="#FF424d66"/>
 
-			<TextBlock Canvas.Left="55" FontSize="30" TextWrapping="Wrap" Text="Instance" Canvas.Top="199" Foreground="#FFECAD25"/>
-			<ComboBox Canvas.Left="55" Canvas.Top="244" x:Name="Instance" FontSize="18" VerticalAlignment="Center" 
+			<TextBlock Canvas.Left="55" FontSize="30" TextWrapping="Wrap" Text="Instance" Canvas.Top="274" Foreground="{StaticResource AppForeground}"/>
+			<ComboBox Canvas.Left="55" Canvas.Top="319" x:Name="Instance" FontSize="18" VerticalAlignment="Center" 
 													RenderTransformOrigin="0.5,0.5" Width="270" Height="28"
 													SelectedItem="{Binding Path=InstanceName}">
 			</ComboBox>
 
-			<Button x:Name="save" Content="Save" Click="save_Click" FontSize="25"  Canvas.Top="310" Canvas.Left="118" Height="62" Width="154" Foreground="#FFECAD25"></Button>
+			<Button x:Name="save" Content="Save" Click="save_Click" FontSize="25"  Canvas.Top="396" Canvas.Left="118" Height="62" Width="154" Foreground="{StaticResource AppForeground}"></Button>
 		</Canvas>
 	</Grid>
 </Window>
