--- a/SoftPhone.Connector/Popups/ToastBalloon.xaml
+++ b/SoftPhone.Connector/Popups/ToastBalloon.xaml
@@ -94,57 +94,32 @@
 		<Border HorizontalAlignment="Stretch"
                 Margin="5,5,5,5"
                 BorderThickness="1,1,1,1"
-                BorderBrush="#FF997137">
+                BorderBrush="#FF997137" Background="{StaticResource AppBackground}">
 			<Border.Effect>
 				<DropShadowEffect Color="#FF747474" />
 			</Border.Effect>
-			<Border.Background>
-				<LinearGradientBrush EndPoint="0.5,1"
-                                     StartPoint="0.5,0">
-					<GradientStop Color="#FF4B4B4B"
-                                  Offset="0" />
-					<GradientStop Color="#FF8F8F8F"
-                                  Offset="1" />
-				</LinearGradientBrush>
-			</Border.Background>
 		</Border>
 		<Image HorizontalAlignment="Left"
-               Margin="0,10,0,0"
-               Width="72"
-               Source="/Images/Info.png"
+               Margin="10,10,0,0"
+               Width="96"
+               Source="/Images/CorA-175x65px.png"
                Stretch="Fill"
-               Height="72"
+               Height="33"
                VerticalAlignment="Top" />
 		<TextBlock Margin="72,49.2,10,0"
                    VerticalAlignment="Top"
-                   Foreground="#FFECAD25"
+                   Foreground="{StaticResource AppForeground}"
                    TextWrapping="Wrap">
             <!--<Run Text="This is a user control. The animation uses the attached " />-->
             <Run FontStyle="Italic"
                  FontWeight="Bold"
                  Text="{Binding Path=BalloonText, ElementName=me, Mode=Default}" />
 		</TextBlock>
-		<Path Fill="#FFFFFFFF"
-              Stretch="Fill"
-              Margin="72,38.2,34,0"
-              VerticalAlignment="Top"
-              Height="1"
-              Data="M26,107 L220.04123,107"
-              SnapsToDevicePixels="True">
-			<Path.Stroke>
-				<LinearGradientBrush EndPoint="0.973,0.5"
-                                     StartPoint="0.005,0.5">
-					<GradientStop Color="#00ECAD25"
-                                  Offset="1" />
-					<GradientStop Color="#87ECAD25"
-                                  Offset="0" />
-				</LinearGradientBrush>
-			</Path.Stroke>
-		</Path>
+
 		<TextBlock Margin="72,10,10,267"
                    Text="SoftPhone notification"
                    TextWrapping="Wrap"
-                   Foreground="#FFECAD25"
+                   Foreground="#FF424d66"
                    FontWeight="Bold" />
 		<Image HorizontalAlignment="Right"
                Margin="0,10,10,0"
